--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
     "firebase": "^10.13.0",
+    "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "openai": "^4.56.0",
     "react": "^18",
